# gpt-learning

./: .gitignore  Makefile  README.md  docker-compose.yml  gpt2_summary.txt  pyproject.toml  setup.ps1
gpt/: __init__.py
gpt/datasets/: __init__.py  character_level_text_dataset.py  word_level_text_dataset.py
gpt/modules/: gpt.py  gpt_language_model.py  multi_head_attention.py  transformer_block.py
gpt/utils/: engine.py  subword_tokenizer.py
notebooks/: summarize.ipynb  train.ipynb
